# jitsi-srtp

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  pom.xml
.github/workflows/: maven.yml
cmake/: arm64-linux-gnu.cmake  ppc64el-linux-gnu.cmake
jitsi-srtp/: assembly.xml  pom.xml
jitsi-srtp-java/: pom.xml
jitsi-srtp-java/src/main/java/org/jitsi/srtp/: SrtcpCryptoContext.java  SrtpContextFactory.java  SrtpErrorStatus.java  SrtpKdf.java  SrtpPolicy.java
jitsi-srtp-java/src/main/java/org/jitsi/srtp/crypto/: BlockCipherAdapter.java  BlockCipherFactory.java  OpenSslWrapperLoader.java  SecurityProviderBlockCipherFactory.java
jitsi-srtp-java/src/test/java/org/jitsi/srtp/: SrtpPerfTest.java  SrtpReplayTest.java  SrtpValidationTest.java
jitsi-srtp-native/: pom.xml
jitsi-srtp-native/src/main/native/: CMakeLists.txt  Hmac.c  SrtpCipherCtrOpenSsl.c
resources/: Dockerfile  fetch-maven.sh  mac-cmake.sh  sources.list.template  ubuntu-build-all.sh  ubuntu-build-docker.sh  ubuntu-cmake.sh  ubuntu-packages.sh
src/main/java/org/jitsi/srtp/: AES.java  Aes.java  BaseSRTPCryptoContext.java  BaseSrtpCryptoContext.java  BlockCipherAdapter.java  BlockCipherFactory.java  CryptoBenchmark.java  HMACSHA1.java  HmacSha1.java  OpenSSLHMAC.java  OpenSSLWrapperLoader.java  OpenSslHmac.java  OpenSslWrapperLoader.java  SRTCPCryptoContext.java  SRTCPPacket.java  SRTCPTransformer.java  SRTPCipherCTR.java  SRTPCipherCTRJava.java  SRTPCipherCTROpenSSL.java  SRTPCipherF8.java  SRTPContextFactory.java  SRTPCryptoContext.java  SRTPPacket.java  SRTPPolicy.java  SRTPTransformer.java  SecurityProviderBlockCipherFactory.java  SrtcpCryptoContext.java  SrtcpPacket.java  SrtpCipherCtr.java  SrtpCipherCtrJava.java  SrtpCipherCtrOpenSsl.java  SrtpCipherF8.java  SrtpContextFactory.java  SrtpCryptoContext.java  SrtpKdf.java  SrtpPacket.java  SrtpPolicy.java
src/main/java/org/jitsi/srtp/crypto/: Aes.java  BlockCipherAdapter.java  CipherFactory.java  HmacSha1.java  JitsiOpenSslProvider.java  MacAdapter.java  OpenSslAesCipherSpi.java  OpenSslAesCtrCipherSpi.java  OpenSslAesEcbCipherSpi.java  OpenSslAesGcmAuthOnlyCipherSpi.java  OpenSslAesGcmCipherSpi.java  OpenSslHmac.java  OpenSslHmacSpi.java  OpenSslWrapperLoader.java  SecurityProviderBlockCipherFactory.java  SecurityProviderStreamCipherFactory.java  SrtpCipher.java  SrtpCipherCtr.java  SrtpCipherCtrJava.java  SrtpCipherCtrOpenSsl.java  SrtpCipherF8.java  SrtpCipherGcm.java  SrtpCipherGcmBC.java  StreamCipherAdapter.java  StreamCipherFactory.java
src/main/java/org/jitsi/srtp/utils/: SrtcpPacket.java  SrtcpPacketUtils.java  SrtpPacket.java  SrtpPacketUtils.java
src/main/native/: HMAC.c  Hmac.c  JitsiCipherOpenSsl.c  JitsiHmacOpenSsl.c  JitsiOpenSslProvider.c  OpenSSLWrapperLoader.c  OpenSslWrapperLoader.c  SRTPCipherCTROpenSSL.c  SrtpCipherCtrOpenSsl.c  SrtpCipherGcmAuthOnlyOpenSsl.c
src/test/java/org/jitsi/srtp/: Assertions.java  ByteArrayBufferImpl.java  SRTPCipherCTRTest.java  SRTPKeyDerivationTest.java  SRTPPerfTest.java  SRTPReplayTest.java  SRTPValidationTest.java  SrtpCipherCtrTest.java  SrtpCipherF8Test.java  SrtpCipherGcmTest.java  SrtpKeyDerivationTest.java  SrtpPerfTest.java  SrtpReplayTest.java  SrtpValidationTest.java  UtSim.java
src/test/java/org/jitsi/srtp/bouncy/castle/: BouncyCastleFipsTest.java
